# TVK_NEWS

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
apps/api/: main.py
configs/: entities.seed.yaml  mla_roster.json  sources.newspapers.yaml  sources.x_handles.yaml  sources.youtube.yaml
db/: schema.sql
docs/: ARCHITECTURE.md
docs/engineering/: 2026-05-25-tn-bilingual-coverage-plan.md  QUALITY_BAR.md
pipelines/: build_rag_index.py  build_vault.py  demo_enrich_analysis.py  demo_manual_overrides.py  eval_classifier.py  flywheel.py  provision_tenant.py  prune_superseded_analyses.py  reanalyze_items.py  resolve_entities.py  run_daily_news.py  run_x_recent.py  run_youtube_ingest.py  send_brief.py  tenant_usage.py  train_classifier.py
pipelines/dags/: daily_news_intelligence.py
scripts/: build_mla_roster.py  build_tn_map.py
src/tnmi/: ai.py  chat.py  clusters.py  config.py  contracts.py  dashboard.py  districts.py  (+28 more)
tests/: conftest.py  test_ai.py  test_api.py  test_chat.py  test_config.py  test_contracts.py  test_dashboard.py  test_districts.py  test_entity_api.py  test_entrypoints.py  test_eval.py  test_flywheel.py  test_labeling.py  test_language.py  test_local_llm.py  test_mla.py  test_news.py  test_pipeline.py  test_prune.py  test_quality.py  test_rag.py  test_rag_entrypoint.py  test_registry.py  test_relevance.py  test_reports.py  test_resolver.py  test_responsibility.py  test_review_storage.py  test_signals.py  test_storage.py  test_tenancy.py  test_training.py  test_validation.py  test_vault.py  test_x_ingestion.py
(+13 files in other folders)
