[project]
name = "tn-media-intelligence"
version = "0.1.0"
description = "Tamil-first public media intelligence platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "feedparser>=6.0.0",
  "trafilatura>=1.12.0",
  "tweepy>=4.14.0",
  "PyYAML>=6.0.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
]
rag = [
  "numpy>=1.26.0",
  "turbovec>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"
